--- a/PyKEP/orbit_plots/CMakeLists.txt
+++ b/PyKEP/orbit_plots/CMakeLists.txt
@@ -1,3 +1,4 @@
 INSTALL(FILES __init__.py DESTINATION ${PYKEP_INSTALL_PATH}/orbit_plots)
 INSTALL(FILES _plots.py DESTINATION ${PYKEP_INSTALL_PATH}/orbit_plots)
+INSTALL(FILES _get_points.py DESTINATION ${PYKEP_INSTALL_PATH}/orbit_plots)
 
