--- a/PyKEP/trajopt/CMakeLists.txt
+++ b/PyKEP/trajopt/CMakeLists.txt
@@ -3,4 +3,8 @@ INSTALL(FILES _mga_1dsm.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt)
 INSTALL(FILES _mga_lt_nep.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt)
 INSTALL(FILES _mr_lt_nep.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt)
 INSTALL(FILES _pl2pl_N_impulses.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt)
+INSTALL(FILES _mga_return_lt_nep.py DESTINATION ${PYKEP_INSTALL_PATH}/trajopt)
+
+ADD_SUBDIRECTORY(motor)
+ADD_SUBDIRECTORY(spacecraft)
 
